[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/UI/glassPanel_200.png" type="Texture" id=1]
[ext_resource path="res://assets/shield_silver.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/barHorizontal_white_mid 200.png" type="Texture" id=3]
[ext_resource path="res://ui/HUD.gd" type="Script" id=4]
[ext_resource path="res://assets/UI/barHorizontal_red_mid 200.png" type="Texture" id=5]
[ext_resource path="res://assets/grey_circle.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "healthbar_flash"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Margin/Container/HeathBar:texture_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 5 ) ]
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="HBoxContainer" parent="Margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="TextureRect" type="TextureRect" parent="Margin/Container"]
margin_right = 30.0
margin_bottom = 560.0
texture = ExtResource( 2 )

[node name="HeathBar" type="TextureProgress" parent="Margin/Container"]
margin_left = 34.0
margin_right = 234.0
margin_bottom = 560.0
value = 75.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 3 )

[node name="Tween" type="Tween" parent="Margin/Container/HeathBar"]

[node name="VSeparator" type="VSeparator" parent="Margin/Container"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 238.0
margin_right = 288.0
margin_bottom = 560.0
custom_constants/separation = 50

[node name="AmmoGauge" type="TextureProgress" parent="Margin/Container"]
margin_left = 292.0
margin_right = 340.0
margin_bottom = 560.0
value = 60.0
texture_progress = ExtResource( 6 )
fill_mode = 4
radial_initial_angle = 270.0
radial_fill_degrees = 180.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/healthbar_flash = SubResource( 1 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
